--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,8 +7,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
     branches: [ develop ]
+    branches-ignore: [ main ]
   pull_request:
     branches: [ develop ]
+    branches-ignore: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
