--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,11 +6,13 @@ name: CI Develop
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
-    branches: [ develop ]
-    branches-ignore: [ main ]
+    branches: 
+    - 'develop'
+    - '!main'
   pull_request:
-    branches: [ develop ]
-    branches-ignore: [ main ]
+    branches: 
+    - 'develop'
+    - '!main'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
